--- a/articles/genomics/index.yml
+++ b/articles/genomics/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: grhuynh
   ms.author: grhuynh
   ms.date: 03/11/2020
-  ms.openlocfilehash: 36b5898aca2f019351aaeda8438fb6771a09b6c4
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 22578809c2590d505caf24997993dbe3fcd9951c
+  ms.sourcegitcommit: cc099517b76bf4b5421944bd1bfdaa54153458a0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "79137040"
+  ms.lasthandoff: 07/09/2021
+  ms.locfileid: "113550532"
 landingContent:
 - title: Erste Schritte
   linkLists:
@@ -24,7 +24,7 @@ landingContent:
     - text: Was ist Microsoft Genomics?
       url: overview-what-is-genomics.md
     - text: Häufig gestellte Fragen
-      url: frequently-asked-questions-genomics.md
+      url: frequently-asked-questions-genomics.yml
   - linkListType: quickstart
     links:
     - text: Ausführen eines Beispielworkflows
